fixed defaults and airbnb styles

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div id="app" />
 
-  <input type="text" id="autocomplete"/>
+  <!-- <input type="text" id="autocomplete"/> -->
   <script src="src/compiled/bundle.js" type="text/javascript"></script>
   <!-- <script>
     var input = document.getElementById('autocomplete');
